--- a/slidingdatepickerx/build.gradle
+++ b/slidingdatepickerx/build.gradle
@@ -1,4 +1,31 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+ext {
+
+    bintrayRepo = "SlidingDatePicker"
+    bintrayName = "amarenkov.android.slidingdatepickerx"
+    libraryName = 'slidingdatepickerx'
+
+    publishedGroupId = 'amarenkov.androidx'
+    artifact = 'slidingdatepicker'
+
+    libraryDescription = 'Custom Date Picker'
+
+    siteUrl = 'https://github.com/a-marenkov/SlidingDatePickerExample'
+    gitUrl = 'https://github.com/a-marenkov/SlidingDatePickerExample.git'
+
+    libraryVersion = '0.1.0'
+
+    developerId = 'a-marenkov'
+    developerName = 'Alexander Marenkov'
+    developerEmail = 'dev.a.marenkov@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
 
 android {
     compileSdkVersion 28
@@ -33,4 +60,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+}
+
+if (project.rootProject.file('local.properties').exists()) {
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
 }
