--- a/slidingdatepickerx/build.gradle
+++ b/slidingdatepickerx/build.gradle
@@ -16,7 +16,7 @@ ext {
     siteUrl = 'https://github.com/a-marenkov/SlidingDatePickerExample'
     gitUrl = 'https://github.com/a-marenkov/SlidingDatePickerExample.git'
 
-    libraryVersion = '1.0.0-alpha'
+    libraryVersion = '1.0.0-alpha1'
 
     developerId = 'a-marenkov'
     developerName = 'Alexander Marenkov'
@@ -54,7 +54,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.0.1'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'amarenkov.androidx:snappyrecyclerview:1.0.0-alpha'
     testImplementation 'junit:junit:4.12'
