--- a/slidingdatepicker/build.gradle
+++ b/slidingdatepicker/build.gradle
@@ -16,7 +16,7 @@ ext {
     siteUrl = 'https://github.com/a-marenkov/SlidingDatePickerExample'
     gitUrl = 'https://github.com/a-marenkov/SlidingDatePickerExample.git'
 
-    libraryVersion = '1.0.0-beta'
+    libraryVersion = '1.0.0-beta1'
 
     developerId = 'a-marenkov'
     developerName = 'Alexander Marenkov'
